# ogl2-android-cxx-sample

./: README.md
ogles2/: build.gradle  gradle.properties
ogles2/app/: build.gradle
ogles2/app/src/main/: AndroidManifest.xml
ogles2/app/src/main/assets/shaders/: shader.frag  shader.vert
ogles2/app/src/main/cpp/: CMakeLists.txt  android_ndk.cmake  main.cpp
ogles2/app/src/main/res/values/: strings.xml
